# RedmineAPI

./: .gitignore  pyproject.toml  requirements.txt
src/: logger.py  main.py  request.py
src/routes/: redmine_request.py
src/static/: script.js  styles.css
src/static/templates/: main.html
src/utils/: catalogs.py  redminereq.py
src/xlsx_files/: burned_hours_per_worker.xlsx
